# ROS2_Learning_content

./: .gitignore  README.md  add_two_int_clinet_no_oop.cpp  add_two_ints_clinet.cpp  add_two_ints_clint.py  add_two_ints_clint_no_oop.py  battary.py  battery.cpp  hardware_robot_states.cpp  my_first_node.cpp  my_hardware_status.py  number_counter.cpp  number_publisher.cpp  smart_phone_sub.py  smartphone.cpp
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_serv.cpp  led_Panal.cpp  number_publisher.cpp  robot_news_station.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_serv.py  led_panal.py  my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: my_simulation.launch.xml
src/robot_description/rviz2/: default.rviz
src/robot_description/urdf/: common_properties.xacro  mobile_base_gazebo.xacro  mobile_robot.xacro  my_robot.urdf.xacro
src/the_robot_msgs/: CMakeLists.txt
src/turtul_cath_them_all/: package.xml  setup.cfg  setup.py
src/turtul_cath_them_all/turtul_cath_them_all/: target_creater.py  turtule_controller.py
